# gzh2xhs

./: .coverage  .env.example  .eslintrc.json  .gitignore  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  NODE_REFACTOR_DELIVERY.md  QUALITY_CHECK_REPORT.md  README.md  coverage.xml  dependency-cruiser.config.cjs  docker-compose.yml  next.config.js  package-lock.json  package.json  perf.json  sonar-project.properties  tailwind.config.ts  test-website.mjs  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  enhanced-ci.yml  python-ci.yml
.trae/documents/: ES6+ 全面重构实施计划（Next.js_TypeScript 代码基）.md  Next.js 项目全面重构计划.md  Next.js_TypeScript_鲁迅风格全面重构计划.md  UI 视觉升级与功能增强方案.md  以 Python 重构现有 Next.js_TypeScript 项目（后端迁移与性能优化方案）.md  价值投资式重构方案（Next.js_TypeScript 项目）.md  企业级架构重构实施计划.md  企业级重构与性能优化实施方案.md  全栈渐进式重构方案（Next.js + NestJS + TypeScript）.md  全面重构实施方案与现状材料（gzh2xhs）.md  实现1000万营收的业务重构与数据闭环方案.md  将 Python 部分迁移到 Node_TypeScript.md  打造“宇宙级酷炫”现代化页面方案.md  把界面改成“宇宙第一酷炫”改造方案.md  特朗普式项目重构实施方案（高效、极致、可控）.md  系统性重构与性能优化实施计划.md  系统性重构与规范落地方案.md  系统性重构方案（架构_技术_安全_性能）.md  艺术化重构实施计划.md  金融分析系统性重构实施方案（适配现有 Next.js_TypeScript 架构）.md  项目重构总体方案（稳中求进，自主可控）.md  齐天大圣级项目全面重构计划.md
apps/api/: Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
apps/api-fastify/: package.json  tsconfig.build.json  tsconfig.json
apps/node-api/: package.json  tsconfig.build.json  tsconfig.json
deploy/: README.md
deploy/python/: Dockerfile
docs/: acceptance.md  api-reference.md  architecture-changelog.md  architecture-refactor-log.md  architecture.md  artistic-style-guide.md  baseline.md  code-heatmap.csv  code-heatmap.json  deps.json  emoji-fix-solution.md  enterprise-architecture-plan.md  migration-to-node.md  perf-baseline.md  perf-python-vs-node.md  refactor-python-migration.md  revenue_cost_model.md  warehouse.sql  xiaohongshu-design-analysis.md  产品需求mvp.md  代码审查检查清单.md  变更影响分析报告.md  性能基准测试结果.md  性能对比报告-Python.md  核心业务场景清单.md  模块价值评估表.md  生成卡片prompt设计.md  重构交付清单.md  重构设计文档.md  重构说明文档.md
docs/ADR/: 0000-template.md  0001-etag-and-concurrency.md  0001-nestjs-express.md  0001-stack-and-architecture.md
docs/architecture/: c4.md  overview.md
docs/refactor/: ADR-001_架构重构总决策.md  Node重构交付说明.md  plan.md  python_migration.md  roadmap.md  基线度量.md  安全审计与风险清单.md  技术评估报告.md  灰度与回滚策略.md  迁移与回滚机制.md  阶段性重构计划与里程碑.md
docs/security/: 安全加固执行手册.md
docs/standards/: architecture-standards.md  (+1 more)
pyapp/: Dockerfile  OPERATIONS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
pyapp/scripts/: bench_generate.py
pyapp/src/pyapp/: __init__.py  main.py
pyapp/src/pyapp/api/: dependencies.py
pyapp/src/pyapp/api/routes/: export.py  generate.py  health.py
pyapp/src/pyapp/application/usecases/: generate_card.py
pyapp/src/pyapp/config/: settings.py
pyapp/src/pyapp/core/: config.py  database.py  exceptions.py
pyapp/src/pyapp/domain/: errors.py  finance.py  models.py
pyapp/src/pyapp/infrastructure/: data_repository.py  user_repository.py
pyapp/src/pyapp/interfaces/controllers/: auth.py  data.py  export.py  finance.py  generate.py  kpi.py  logs.py  openapi.py
pyapp/src/pyapp/interfaces/middleware/: common.py
pyapp/src/pyapp/lib/: http.py  logger.py
pyapp/src/pyapp/modules/auth/: controller.py  deps.py  models.py  schemas.py  security.py  service.py
pyapp/src/pyapp/modules/data/: controller.py
pyapp/src/pyapp/modules/export/: controller.py
pyapp/src/pyapp/modules/finance/: controller.py  schemas.py  service.py
pyapp/src/pyapp/modules/generate/: controller.py  schemas.py  service.py
pyapp/src/pyapp/modules/generate/lib/: renderer.py
pyapp/src/pyapp/modules/generate/providers/: base.py  deepseek.py
pyapp/src/pyapp/modules/health/: controller.py
pyapp/src/pyapp/modules/kpi/: controller.py
pyapp/src/pyapp/services/: prompts.py
pyapp/src/pyapp/services/ai/: base.py  deepseek.py  nanobanana.py
pyapp/src/pyapp/services/image/: renderer.py
pyapp/src/pyapp/shared/: cache.py  concurrency.py  image_converter.py  metrics.py  ratelimiter.py
pyapp/tests/: conftest.py  test_auth.py  test_data.py  test_etag.py  test_export.py  test_finance.py  test_generate.py  test_http_common.py  test_image_converter.py  test_kpi_openapi_logs.py
pyapp/tests/integration/: test_api.py
pyapp/tests/unit/: test_ai_service.py
refactor_python/: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  requirements.txt  ruff.toml
refactor_python/.github/workflows/: ci-cd.yml
refactor_python/docs/: architecture.md
refactor_python/src/gzh2xhs_refactor/: __init__.py
refactor_python/src/gzh2xhs_refactor/application/: use_cases.py
refactor_python/src/gzh2xhs_refactor/domain/: entities.py  services.py
refactor_python/src/gzh2xhs_refactor/infrastructure/providers/: ai_providers.py
refactor_python/src/gzh2xhs_refactor/infrastructure/services/: image_renderer.py
refactor_python/src/gzh2xhs_refactor/shared/: design_patterns.py  errors.py  events.py  logging.py  performance.py  types.py
refactor_python/tests/: conftest.py
refactor_python/tests/unit/: test_application_use_cases.py  test_domain_entities.py
scripts/: aggregate.ts  bench.ts  code-heatmap.mjs
src/: middleware.ts
tests/: ab.test.ts  ai-call.test.ts  analytics.test.ts  auth-data-logs.test.ts  binary-etag.test.ts  cache.rateLimiter.test.ts  cache.test.ts  concurrency.limiter.test.ts  config.test.ts  export-controller.test.ts  finance.usecase.test.ts  generate-controller.test.ts  generate-parallel.test.ts  generate-placeholder.test.ts  generate-usecase.test.ts  http.common.test.ts  http.etag.test.ts  http.test.ts  image-converter-fallback.test.ts  imageConverter.test.ts  logger.test.ts  metrics.test.ts  openapi.test.ts  rateLimiter.test.ts  rbac.test.ts  shared-config.test.ts  shared-errors.test.ts  shared-validation.test.ts  toast.test.ts  use-export.test.ts  use-hotkeys.test.ts  use-session-id.test.ts  utils.lru.test.ts  utils.request.test.ts
themes/: intellij-art.icls  vim-art.vim  vscode-art.json
(+247 files in other folders)
