[tool.poetry]
name = "pyapp"
version = "0.1.0"
description = "Python service replacing Next.js API routes with FastAPI"
authors = ["Team"]
readme = "README.md"
packages = [{ include = "pyapp", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
pydantic = "^2.9.0"
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
structlog = "^24.4.0"
orjson = "^3.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-benchmark = "^4.0.0"
ruff = "^0.7.2"
black = "^24.10.0"
mypy = "^1.12.0"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
